--- a/Assignment-3/package.json
+++ b/Assignment-3/package.json
@@ -11,10 +11,15 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-handlebars": "^8.0.4",
-    "mongoose": "^9.1.5"
+    "express-session": "^1.19.0",
+    "mongoose": "^9.1.5",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
